tools/data-handler/test/test-data/invalid/invalid-link-type-broken-card-type-ref/.cards/local/reports/testReport/.schema
[
  {
    "version": 1,
    "id": "reportSchema",
    "file": "../testReport.json"
  }
]